left and right page overlays to front

--- a/columns.css
+++ b/columns.css
@@ -17,6 +17,7 @@
     top: 0;
     height: 100%;
     width: 10px;
+    z-index: 1000;
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
