--- a/columns.css
+++ b/columns.css
@@ -1,20 +1,25 @@
 .columns-column {
     display: inline-block;
+    height: 100%;
 }
 
 .columns-container {
     position: relative;
     overflow: hidden;
-    text-align: center;
 }
 
 .columns-scroller {
+    position: relative;
     height: 100%;
     white-space: nowrap;
+    transition: left .3s;
+    -webkit-transition: left .3s;
+    -moz-transition: left .3s;
+    -o-transition: left .3s;
 }
 
 .columns-page-indicator {
-    position: fixed;
+    position: absolute;
     top: 10px;
     left: 0;
     right: 0;
@@ -37,7 +42,7 @@
 }
 
 .columns-left-overlay, .columns-right-overlay {
-    position: fixed;
+    position: absolute;
     top: 0;
     height: 100%;
     width: 10px;
