--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 .columns-column {
     display: inline-block;
     height: 100%;
+    transition: width .3s;
+    -webkit-transition: width .3s;
+    -moz-transition: width .3s;
+    -o-transition: width .3s;
 }
 
 .columns-container {
